outputs/ip_deit32_es_35085782.out
  File "/home/pkadukar/furi-hsi/jobs/run_deit_t32s16_weighted_es.py", line 137
    sys.stdout.write(f"[collate] sample keys={list(first.keys())}, chosen_label_key={found_key}
                     ^
SyntaxError: unterminated string literal (detected at line 137)
